# claimlens

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  evaluate.py  index.html  presentation.html  pyproject.toml  requirements.txt
.github/workflows/: pages.yml  test.yml
claimlens/: __init__.py  anomaly.py  api.py  classify.py  config.py  eval_metrics.py  extract.py  handoff.py  pipeline.py  qualitymind_client.py  schema.py  trends.py
data/: generate_sample_data.py
docs/: ARCHITECTURE-items-8-10.md  REQUIREMENTS-items-8-10.md  TEXT-NARRATIVE-PATH.md
tests/: conftest.py  test_api.py  test_bugfixes.py  test_classify.py  test_eval_metrics.py  test_extract.py  test_generate.py  test_handoff.py  test_qualitymind_client.py  test_schema.py  test_trends.py
